Fixed content being too close to navbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,5 @@
-
 body {
 }
 .content {
-    padding-top: 20px;
-    margin-top: 50px;
+    padding-top: 70px;
 }
